# misp-workbench

./: .env.dev.dist  .env.dist  .env.test  .gitignore  .gitmodules  .mcp.json  .readthedocs.yaml  CLAUDE.md  README.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  garage.dev.toml  garage.test.toml  garage.toml.dist  mkdocs.yml  package-lock.json  package.json
api/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  entrypoint.dev.sh  entrypoint.sh  opensearch.mapping.json  poetry.toml  pyproject.toml  requirements.txt  setup_logging.py
api/alembic/: env.py
api/alembic/versions/: 05113716518f_add_organisation_table.py  054d8a965f31_change_user_settings_value_to_jsonb.py  149c630ce11f_add_module_settings_table.py  189781eabdc4_add_servers_table.py  1a2b3c4d5e6f_replace_role_perm_columns_with_scopes.py  2c5d8e7a1b9f_add_api_keys_table.py  39cbeba07d8b_add_galaxies_tables.py  3d6e9f8c2a1b_add_audit_logs_table.py  4a5b6c7d8e9f_grant_api_keys_scopes_to_default_roles.py  4d3af7aab04f_add_objects_related_tables.py  541fabd34b80_add_feeds_table.py  5a6b6047d311_add_settings_table.py  5b6c7d8e9f01_add_admin_disabled_to_api_keys.py  625293130b0b_add_notifications_table.py  8f3a2d1e9b7c_add_hunts_table.py  91874c0f72a0_add_enabled_column_to_module_settings_.py  939b47ef27e5_add_roles_table.py  9541c0537355_add_user_settings_table.py  a1b2c3d4e5f6_add_hunt_type_to_hunts.py  b3e9f1a2c4d7_add_hunt_run_history_table.py  c47c81d4fda3_init.py  c8d7e6f5a4b3_detach_object_references_fks.py  d4e5f6a7b8c9_detach_attributes_objects_from_events.py  e1a2b3c4d5f6_drop_events_table.py  e7215f4129ec_add_tags_table.py  e7215f4129ec_create_tags_table.py  f3e2d1c0b9a8_detach_event_attribute_fks_from_tag_tables.py  fcb4b201d20b_add_sharing_groups_table.py  feec2650d532_add_taxonomies_tables.py  g7h8i9j0k1l2_add_reactor_tables.py  h1i2j3k4l5m6_add_lab_notebook_tables.py  i2j3k4l5m6n7_add_lab_notebook_pinned.py  j3k4l5m6n7o8_per_user_notebook_pins.py  k4l5m6n7o8p9_add_exports_table.py  l5m6n7o8p9q0_add_export_scheduling.py  m6n7o8p9q0r1_add_export_distribution.py
api/app/: database.py  dependencies.py  flower.py  main.py  miniocli.py  opensearch.py  opensearch_setup.py  rediscli.py  s3cli.py  s3setup.py  settings.py
api/app/auth/: auth.py  security.py  utils.py
api/app/cli/: __main__.py
api/app/db/: session.py
api/app/defaults/: default-feeds.json  runtime_settings_defaults.py
api/app/models/: __init__.py  api_key.py  attribute.py  audit_log.py  database.py  event.py  export.py  feed.py  galaxy.py  hunt.py  lab.py  module.py  notification.py  object.py  object_reference.py  organisation.py  organisations.py  reactor.py  role.py  server.py  setting.py  sharing_groups.py  tag.py  taxonomy.py  user.py  user_setting.py
api/app/repositories/: api_keys.py  attachments.py  attributes.py  audit_logs.py  correlations.py  events.py  exports.py  feeds.py  freetext.py  galaxies.py  hunts.py  lab.py  modules.py  notifications.py  object_references.py  object_templates.py  objects.py  organisations.py  reactor.py  reports.py  roles.py  servers.py  settings.py  sharing_groups.py  sightings.py  sync.py  tags.py  tasks.py  taxonomies.py  user_settings.py  users.py
api/app/routers/: api_keys.py  attachments.py  attributes.py  audit_logs.py  auth.py  correlations.py  diagnostics.py  events.py  exports.py  feeds.py  galaxies.py  hunts.py  lab.py  mcp.py  modules.py  notifications.py  objects.py  (+15 more)
api/lab_library/: altair_plots_quickstart.ipynb  mmdb_lookup_quickstart.ipynb
api/mwctipy/: __init__.py  client.py  render.py
api/opensearch/: entrypoint.sh
(+618 files in other folders)
