[tool.poetry]
name = "misp-lite-api"
version = "0.1.0"
description = "MISP, but lightweight"
authors = ["Luciano Righetti <luciano.righetti@circl.lu>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.115.7"
uvicorn = "^0.29.0"
pymisp = "^2.4.159"
pydantic = "^2.7.1"
sqlalchemy = "^2.0.30"
psycopg2-binary = "^2.9.3"
alembic = "^1.13.1"  
python-multipart = "^0.0.18"
cryptography = "^43.0.1"
aiofiles = "^0.8.0"
celery = "^5.2.7"
flower = "^1.0.0"
Jinja2 = "^3.1.5"
redis = "^4.3.3"
typer = {extras = ["all"], version = "^0.12.3"}
fastapi-pagination = "^0.12.24"
httpx = "^0.23.1"
asgiref = "^3.6.0"
opensearch-py = "^2.5.0"
pydantic-settings = "^2.2.1"
aiohttp = "^3.10.11"
bcrypt = "^4.2.0"
pyjwt = "^2.9.0"
minio = "^7.2.15"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
requests = "^2.27.1"
debugpy = "^1.6.0"
pyupgrade = "^2.34.0"
autoflake = "^1.4"
autopep8 = "^1.6.0"
black = "^24.3.0"
flake8 = "^4.0.1"
pre-commit = "^2.19.0"
isort = "v5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
