[tool.poetry]
name = "misp-workbench-api"
version = "0.1.0"
description = "misp-workbench API server"
authors = ["Luciano Righetti <luciano.righetti@circl.lu>", "CIRCL <team@circl.lu>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.12"
uvicorn = "^0.29.0"
pymisp = "^2.4.159"
pydantic = "^2.7.1"
sqlalchemy = "^2.0.30"
psycopg2-binary = "^2.9.3"
alembic = "^1.13.1"  
python-multipart = "^0.0.18"
cryptography = "^46.0.7"
aiofiles = "^0.8.0"
celery = "^5.5.1"
flower = "^2.0.0"
Jinja2 = "^3.1.6"
redis = "^4.3.3"
typer = {extras = ["all"], version = "^0.15.2"}
fastapi-pagination = "^0.12.24"
httpx = "^0.28.1"
asgiref = "^3.6.0"
opensearch-py = "^2.5.0"
pydantic-settings = "^2.2.1"
aiohttp = "^3.13.4"
bcrypt = "^4.2.0"
pyjwt = "^2.12.0"
boto3 = "^1.35"
celery-redbeat = "^2.3.3"
fastmcp = "^2.0"

[tool.poetry.dev-dependencies]
pytest = "^9.0.3"
pytest-cov = "^6.2.1"
requests = "^2.33.0"
debugpy = "^1.8.14"
pyupgrade = "^3.20.0"
autoflake = "^2.3.1"
autopep8 = "^2.3.2"
black = "^26.3.1"
flake8 = "^7.3.0"
pre-commit = "^4.2.0"
isort = "v6.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
